# proxy-ua-requests-handelr

./: cfg.py  custom_requests.py  pyproject.toml
src/: custom_requests.py  headers_handler.py
